# evillimiter

./: FIXES.md  README.md  pyproject.toml  setup.py
evillimiter/: evillimiter.py
evillimiter/console/: io.py  shell.py
evillimiter/networking/: limit.py  monitor.py  spoof.py  utils.py
