[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "evillimiter"
version = "1.5.0"
description = "Monitors, analyzes and limits the bandwidth of devices on the local network"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "bitbrute", email = "bitbrute@gmail.com" },
]
keywords = ["evillimiter", "limit", "bandwidth", "network"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Networking",
]

dependencies = [
    "colorama>=0.4.6",
    "netaddr>=0.8.0",
    "netifaces-plus>=0.12.3",
    "tqdm>=4.60.0",
    "scapy>=2.5.0",
    "terminaltables>=3.1.10",
]

[project.scripts]
evillimiter = "evillimiter.evillimiter:run"

[project.urls]
Homepage = "https://github.com/bitbrute/evillimiter"
Repository = "https://github.com/bitbrute/evillimiter"